Fixed the double spacing under header in mobile and increase width of modal

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -25,9 +25,8 @@ $base-size: 16; // in 'px' unit
   --general-padding: #{f.rem(16)};
   --general-b-radius: #{f.rem(4)};
   --wordsDivContainer-m-top: #{f.rem(32)};
-  --children-width: #{f.rem(288)};
+  --children-width: #{f.rem(320)};
   --modal-m-top: #{f.rem(92)};
-  --spacing: #{f.rem(42)};
   --settings-element-height: 0; // changed in javascript
 
   --timer-current-width: 100%;
