--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -45,7 +45,7 @@ body {
 }
 
 .onlyWords__margin-bottom {
-  margin-bottom: var(--spacing);
+  margin-bottom: var(--wordsDivContainer-m-top);
 }
 
 .words-font {
